syntax="proto2";

package proxy;

message BlockMeta {
    optional int64 id = 1;
    optional int64 generation = 2;
    optional int64 number_bytes = 3;
    optional int32 replication = 4;
    optional int64 collection_id = 5;
    optional string block_pool_id = 6;
};

message BlockStorageNode {
    required string data_node_id = 1;
    required string storage_id = 2;
};

message BlockStorage {
    repeated BlockStorageNode nodes = 1;
    optional int64 id = 2;
};

message INodeID {
    required int64 id = 1;
};

message INodeMeta {
    required int64 id = 1;
    required string name = 2;
    required int64 permission = 3;
    required int64 modification_time = 4;
    required int64 access_time = 5;
    optional int64 header = 6;
    required int32 type = 7;
    optional int64 parent_id = 8;
    optional string client_name = 9;
    optional string client_machine = 10;
};

message INodeFileBlock {
    required int64 id = 1;
    optional int64 next_block_id = 2;
    optional int64 number_bytes = 3;
};

